# esh-ege-s-shell

./: CMakeLists.txt  README.md  todo  todochecker.c
esh/: CMakeLists.txt  README.md  config.txt  todochecker.c  todos.txt
esh/include/: extras.h
esh/src/: esh.c  esh.h  extras.c  extras.h
include/: esh.h  internal_functions.h  types.h
src/: builtin_functions.c  esh.c  getters.c  internal_functions.c  main.c
